--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -7,7 +7,7 @@
 
 @import "sections/header.scss";
 @import "sections/menu.scss";
-@import "sections/content.scss";
+// @import "sections/content.scss";
 @import "sections/footer.scss";
 // //responsive_adaptive
 @import "adaptive/media.scss";
