--- a/app/scss/layouts/ajustment.scss
+++ b/app/scss/layouts/ajustment.scss
@@ -11,7 +11,6 @@ box-sizing: border-box;
 
 body {
   font-size: 100%;
-  min-width: 320px;
   position: relative;
   line-height: 1.75;
   overflow-x: hidden;
@@ -43,20 +42,6 @@ li {
   margin: 0;
 }
 
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  &::after, &::before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  &::after, &::before {
-    content: '';
-  }
-}
-
 .wrapper {
   .main-wrap {
     
@@ -69,5 +54,19 @@ li {
     overflow: hidden;
   }
 }
+// * {
+//   -webkit-box-sizing: border-box;
+//   -moz-box-sizing: border-box;
+//   box-sizing: border-box;
+//   &::after, &::before {
+//     -webkit-box-sizing: border-box;
+//     -moz-box-sizing: border-box;
+//     box-sizing: border-box;
+//   }
+//   &::after, &::before {
+//     content: '';
+//   }
+// }
+
 
 
